<resources>
    <string name="app_name">GSLedger</string>
    <string name="loginwithgmail">Login with Gmail</string>
    <string name="signupwithgmail">Sign up with Gmail</string>
    <string name="priceperitem">Price per item</string>
    <string name="gold">Gold</string>
    <string name="silver">Silver</string>
    <string name="bar">Bar</string>
    <string name="coin">Coin</string>
    <string name="delete">Delete</string>
    <string name="summit">Summit</string>
    <string name="provide">provided by investing.com</string>
    <string name="currency">Currency</string>
    <string name="edit">edit</string>
    <string name="quantity">Quantity</string>
    <string name="profit">Profit</string>
    <string name="buydate">Buy date</string>
    <string name="item">Item</string>
    <string name="brand">Brand</string>
    <string name="Price">Price</string>
    <string name="weight">Weight</string>
    <string name="packagetype">Package</string>
    <string name="type">Type</string>
    <string name="metal">Metal</string>
    <string name="year">Year</string>
    <string name="ratioChart">Gold/Silver Ratio</string>
    <string name="spotPrice">Spot Price</string>
    <string name="weightUnit">Weight Unit</string>
    <string name="delAccount">Delete Your List and Initialize Application</string>
    <string name="subscribe">Subscribe</string>
    <string name="adfree">Ad Free, Historical chart</string>
    <string name="unlimitedList">Unlimited List</string>
    <string name="adfreerestart">Please restart to remove Ads.</string>
    <string name="caution">Caution</string>
    <string name="delAgreeCheck"> Do you agree to delete your list and accounts?(Data cannot be recovered and you can not use the data of device that is sign up with the same gmail.)</string>
    <string name="details">Details</string>
    <string name="currentPrice">Current Price</string>
    <string name="totalPrice">Total Price</string>
    <string name="unitPrice">Unit Price</string>
    <string name="oneUnitPrice">One Unit Price</string>
    <string name="memo">Memo</string>
    <string name="modify">Edit Memo</string>
    <string name="selectType">Select Type</string>
    <string name="next">Next</string>
    <string name="Product">Product Name</string>
    <string name="totalWeight">Total weight</string>
    <string name="dateOfPurchase">Date of Purchase</string>
    <string name="yearSeries">Year Series</string>
    <string name="grade">Grade</string>
    <string name="priceRange">Price range</string>
    <string name="write">Write</string>
    <string name="contents">Contents</string>
    <string name="lastUpdate">Last updated</string>
    <string name="disclaimer">Disclaimer</string>
    <string name="total">Total</string>
    <string name="overview">Overview</string>
    <string name="chart">Chart</string>
    <string name="historicalChart">Historical Chart</string>
    <string name="list">List</string>
    <string name="option">Option</string>
    <string name="estimate">estimate</string>
    <string name="totalChartSpotPrice">Total Asset based on Spot price</string>

    <string name="backButton">Please press again to exit app</string>
    <string name="slot">List</string>
    <string name="goldChart">Gold Chart</string>
    <string name="silverChart">Silver Chart</string>
    <string name="Profit">profit</string>
    <string name="ledgerEmpty">Your list is empty</string>
    <string name="addProduct">Add Product</string>
    <string name="deleteProduct">Total</string>
    <string name="banner_ad_unit_id">ca-app-pub-8453032642509497~4168684141</string>
    <string name="privacyPolicyText">I have read and agree to the Terms and Conditions and Privacy Policy</string>
    <string name="rangePrice">Please enter the price in the above range for accurate calculation</string>
    <string name="rangePriceNotice">This is the price range for accurate operation of the calculator.&#10;(Not real price)</string>
    <string name="delProduct">Do you agree to delete the product?&#10;(data cannot be recovered)</string>
    <string name="notice">Notice</string>
    <string name="alert">Live Price Alert</string>
    <string name="alertswitch">Alert Switch</string>
    <string name="alertrange">Alert Range</string>
    <string name="no">No</string>
    <string name="oneperaccount">This Gmail is already signed up.&#10;Please sign up with another Gmail.</string>
    <string name="agree">Agree</string>
    <string name="optionTerms">Check the Terms and Conditions and Privacy Policy</string>
    <string name="checkBox">Please read and agree to the Terms and Conditions and Privacy Policy and check the box</string>
    <string name="subscription_benefits">Subscription benefits :</string>
    <string name="com.crashlytics.useFirebaseAppId">true</string>
</resources>
