<?xml version="1.0" encoding="utf-8"?>
<layout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools">

    <data>

        <import type="com.gsgana.gsledger.data.Product" />

        <import type="com.gsgana.gsledger.utilities.ConstantsKt" />

        <variable
            name="viewModel"
            type="com.gsgana.gsledger.viewmodels.DetailViewModel" />

    </data>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="0.18"

            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="80dp"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <LinearLayout
                    android:id="@+id/layout4"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:background="@color/colorPrimary"
                    android:gravity="center"
                    android:orientation="horizontal">

                    <LinearLayout
                        android:id="@+id/layout4r"
                        android:layout_width="80dp"
                        android:layout_height="match_parent"
                        android:background="@drawable/ic_arrow_back_black_24dp"
                        android:clickable="true"
                        android:orientation="horizontal" />


                </LinearLayout>

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="0.3"
                    android:text="Page 4/6"
                    android:textAlignment="center"
                    android:textSize="29sp" />
            </LinearLayout>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="13dp"
                android:text="@string/dateOfPurchase"
                android:paddingStart="5dp"
                android:textSize="24dp" />

            <DatePicker
                android:id="@+id/datePicker1"
                android:layout_width="match_parent"
                android:layout_height="160dp"
                android:calendarViewShown="false"
                android:datePickerMode="spinner" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:orientation="vertical"
                android:layout_marginBottom="29dp">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:paddingStart="5dp"
                    android:text="@string/yearSeries"
                    android:textSize="24dp" />

                <NumberPicker
                    android:id="@+id/yearSeriesPicker"
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_marginTop="13dp"
                    android:textAlignment="center"
                    android:textSize="29sp"
                    android:layout_weight="1" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="13dp"
                    android:text="@string/grade"
                    android:paddingStart="5dp"
                    android:textSize="24dp" />

                <LinearLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent"
                    android:layout_weight="1"
                    android:orientation="horizontal">

                    <Spinner
                        android:id="@+id/gradeSpinner"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="13dp"
                        android:layout_weight="1" />

                    <NumberPicker
                        android:id="@+id/gradePicker"
                        android:layout_width="match_parent"
                        android:layout_height="match_parent"
                        android:layout_marginTop="13dp"
                        android:textAlignment="center"
                        android:textSize="29sp"
                        android:layout_weight="1" />


                </LinearLayout>


            </LinearLayout>


        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:layout_weight="1.3"
            android:orientation="horizontal"
            android:gravity="center">


            <Button
                android:id="@+id/moveTo4"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_weight="1"
                android:text="@string/next"
                android:textColor="@color/white"
                android:textSize="35dp"
                android:background="@color/mu1_data_up"
                android:padding="18dp"
                android:theme="@style/NextButton" />

            <ProgressBar
                android:id="@+id/summitProgress"
                android:padding="18dp"
                android:layout_width="match_parent"
                android:layout_height="match_parent" />

        </RelativeLayout>

    </LinearLayout>

</layout>